homework2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-cs-app
    template:
       metadata:
          labels:
             app: hello-cs-app
       spec:
          containers:
          - name: hello-cs
            image: reagafonov/docker-health:v1
            ports:
              - name: web
                containerPort: 80
