homework2/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: reagafonov/docker-health:v1
    ports:
      - containerPort: 80
